# university_tasks

WEBPROG2024/: db.sqlite3
WEBPROG2024/django_app/: db.sqlite3
WEBPROG2024/todoproject/: settings.py
WEBPROG2024/第3回/: Pythonの基礎4.html  Robot.py  Sampe4_3.py  Sample4_1.py  Sample4_10.py  Sample4_10a.py  Sample4_1a.py  Sample4_2.py  Sample4_4.py  Sample4_5.py  (+10 more)
essay/: 人工知能.docx
ouyoukumikomi/Ex10/main/: CMakeLists.txt
ouyoukumikomi/Ex10/main/src/: character.c  character.h  led.c  pushButton.c  sevenSegmentLed.c  task.c  toggleSwitch.c  toggleSwitch.h
ouyoukumikomi/Ex10/main/src/lcd/: lcd.c  lcd.h  lcdHard.h  printLcd.c  printLcd.h  timerPrint.c  timerPrint.h
ouyoukumikomi/Ex13/main/: CMakeLists.txt
ouyoukumikomi/Ex13/main/src/: sevenSegmentLed.h  stopwatch.c  stopwatch.h  task.c
ouyoukumikomi/Ex13/main/src/lcd/: lcd.c  lcd.h  lcdHard.h  printLcd.c  printLcd.h  printLcdImpr.h  timerPrint.c  timerPrint.h
pro2/: .gitignore  Kadai03_1.java  Kadai03_2.java  Kadai03_3.java  Kadai03_4.java  Kadai04_3.java  Kadai04_4.java  Kadai05_2.java  Kadai05_3.java  Kadai05_4.java  Kadai06_4.java  Kadai06_5.java  Kadai07_3.java  Kadai07_4.java  Kadai08_1.java  Kadai08_3.java  Kadai08_4.java  Kadai09_1.java  Kadai09_3.java  Kadai09_4.java  Kadai10_1.java  Kadai10_1_main.txt  Kadai10_2_main.txt  Kadai10_3.java  Kadai10_4.java  Kadai10_4_main.txt  Kadai11_3.java  Kadai11_4.java  Kadai12_1.java  Kadai12_2.java  Kadai12_3.java  Kadai12_4.java  Kadai13_1.java  Kadai13_2.java  Kadai13_3.java  Kadai13_4.java  Kadai14_1.java  Kadai14_2.java  Kadai14_3.java  Kadai14_4.java  (+7 more)
(+79 files in other folders)
