idf_component_register(SRCS "src/task.c"
                            "src/sevenSegmentLed.c"
                            "src/pushButton.c"
                            "src/stopwatch.c"
                            "src/lcd/printLcd.c"
                            "src/lcd/timerPrint.c"
                            "src/lcd/lcd.c"
                    INCLUDE_DIRS ".")